@@ -318,6 +318,11 @@ label {
 	white-space:nowrap;
 }
 
+.spikeKillMenuItem {
+	padding-left: 0.5em !important;
+	display: block;
+}
+
 .deviceUp {
 	color: rgba(148, 179, 107, 0.8) !important;
 }
