@@ -375,6 +375,11 @@ label.ui-state-hover > span {
 	white-space:nowrap;
 }
 
+.spikeKillMenuItem {
+	display: block;
+	width: 100%:
+}
+
 .deviceUp {
 	color: #3C8A3C !important;
 }
